--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -7,3 +7,4 @@ body{font-size:12px;}
 a{text-decoration: none;color:#000;}
 a:hover{text-decoration: underline;}
 *{box-sizing:border-box;}
+div{color:#f00;font-size:20px;}
