--- a/src/less/common/Footer.less
+++ b/src/less/common/Footer.less
@@ -26,6 +26,7 @@ footer{
             align-items:center;
             text-decoration: none;
             .fs(14);
+            color:#666;
 
             .icon-svg{                
                 .fs(20) !important;
