--- a/src/less/common/Footer.less
+++ b/src/less/common/Footer.less
@@ -7,30 +7,24 @@ footer{
 	position: fixed;
 	left: 0;
 	right: 0;
-	bottom: 0;
+    bottom: 0;
+    z-index: 9999;
     overflow: hidden;
+    display:flex;
     
     div{
-        overflow: hidden;
-        display:flex;
-        justify-content:space-between;
+        flex: 1;
        height:100%;
+       display:flex;
+       flex-direction:column;
+       justify-content: center;
+       align-items:center;
+       text-decoration: none;
+       .fs(14);
+       color:#666;
 
-        a{
-            display: block;
-            width: 100%;
-            height: 100%;
-            display:flex;
-            flex-direction:column;
-            justify-content: center;
-            align-items:center;
-            text-decoration: none;
-            .fs(14);
-            color:#666;
-
-            .icon-svg{                
-                .fs(20) !important;
-            }
+        .icon-svg{                
+            .fs(20) !important;
         }
 
         .active{
