--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -1,4 +1,5 @@
-body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img,input,a{ margin:0; padding:0; }
+body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img,input,a,p{ margin:0; padding:0; }
+*{padding:0;margin:0;}
 ul,ol{list-style: none;}
 img{display:block;border:0;}
 input{outline:none;}
