--- a/src/less/reset.less
+++ b/src/less/reset.less
@@ -1,6 +1,6 @@
 body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img,input,a,p{ margin:0; padding:0; }
 *{padding:0;margin:0;}
-ul,ol{list-style: none;}
+ul,ol,li{list-style: none;}
 img{display:block;border:0;}
 input{outline:none;}
 header,footer,section,nav{display:block;}
