登录注册静态完成

--- a/src/components/Classify/Classify.less
+++ b/src/components/Classify/Classify.less
@@ -19,6 +19,7 @@
             .w(20);
             .h(20);                
             background-size:cover;
+            -webkit-filter: grayscale(100%);
             margin:auto;
         }
         
