--- a/src/less/common/Footer.less
+++ b/src/less/common/Footer.less
@@ -9,11 +9,10 @@ footer{
 	right: 0;
     bottom: 0;
     z-index: 9999;
-    overflow: hidden;
-    display:flex;
-    
+    display:flex !important;
+
     div{
-        flex: 1;
+        flex: 1 !important;
        height:100%;
        display:flex;
        flex-direction:column;
